frontend: fix container width on small screens

--- a/frontend/pages/_app.global.css
+++ b/frontend/pages/_app.global.css
@@ -37,7 +37,7 @@ img {
 }
 
 .container {
-  width: 800px;
+  max-width: 800px;
   margin: 0 auto;
   padding: 0 12px;
 }
